# HAN

./: HAN.code-workspace  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: atoms.yaml  env.yaml
docs/: README.md
docs/2025-10-han-discussion-dialogs/: 2025-10-han-dialog-10-msg-flow.html  2025-10-han-dialog-10-msg-flow.md  2025-10-han-dialog-12-fixed-vs-learned.md  2025-10-han-dialog-2-resource.md  2025-10-han-dialog-4-self-revision.md  2025-10-han-dialog-7-high-level.md  2025-10-han-dialog-8-deep-han.md  2025-11-26-han-implementation-plan.md  2025-11-26-han-minimal-demo-plan.md
docs/2025-10-han-discussion-dialogs.md/: 2025-10-han-dialog-1-trainability.md  2025-10-han-dialog-11-routing.md  2025-10-han-dialog-13-summary.md  2025-10-han-dialog-3-minimal-demo.md  2025-10-han-dialog-5-learnable-taste.md  2025-10-han-dialog-6-self-org.md  2025-10-han-dialog-9-scalable-policy.md  2025-11-26-han-architecture.md
docs/2025-12-han-v1-dev-logs/: 2025-12-11-v1-blueprint-backup.md  2025-12-11-v1-blueprint.html  2025-12-11-v1-blueprint.md  2025-12-v1-step-1.html  2025-12-v1-step-1.md
experiments/: run_experiment.py
